<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/example_bg"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Bienvenido a YuConnect!"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Iniciar Sesión"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle"
        app:layout_constraintVertical_bias="0.02" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:elevation="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="14dp"
        android:background="@drawable/radius_cardview_login"
        android:layout_height="460dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/radius_cardview_login"
            android:layout_height="match_parent"
            android:paddingVertical="22dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_cardview_login"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/forget_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_password"

                    android:layout_marginVertical="6dp"

                    android:background="@drawable/radius_cardview_register"
                    android:fontFamily="@font/poppins_semibold_italic"

                    android:contextClickable="true"
                    android:onClick="callForgetPassword"

                    android:text="@string/forget_Pass"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/aceptar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forget_Password"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="2dp"
                    android:background="@drawable/style_buttom_login"
                    android:onClick="letTheUserLoggedIn"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <RelativeLayout
                    android:id="@+id/redes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/aceptar"
                    android:layout_marginTop="4pt"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nextTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold">
                    </TextView>

                    <RelativeLayout
                        android:id="@+id/secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22pt"
                        android:layout_marginTop="14pt"
                        android:layout_marginEnd="22pt">

                        <ImageView
                            android:id="@+id/facebook"
                            android:layout_width="28pt"
                            android:layout_height="28pt"
                            android:layout_alignParentStart="true"
                            android:src="@drawable/ic_google" />

                        <ImageView
                            android:id="@+id/google"
                            android:layout_width="26pt"
                            android:layout_height="26pt"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_facebook" />

                        <ImageView
                            android:id="@+id/microsoft"
                            android:layout_width="28pt"
                            android:layout_height="28pt"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_twitter" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/elseTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/secondary"
                        android:layout_marginTop="2pt"
                        android:text="@string/or"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/crear"
                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/elseTo"
                        android:layout_centerHorizontal="true"

                        android:layout_marginTop="4dp"
                        android:background="@drawable/radius_cardview_login"
                        android:onClick="callSignUpFromLogin"
                        android:text="@string/createAccount"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/login_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"

                    android:elevation="8dp"
                    android:padding="20dp"
                    android:visibility="gone">


                    <ProgressBar
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true" />


                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_phone_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:layout_marginTop="-2pt"
                    android:hint="@string/user"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_user"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:layout_below="@id/login_phone_number"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />


                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>