<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo_login"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Bienvenido a YuConnect!"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Registro"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle"
        app:layout_constraintVertical_bias="0.04" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:elevation="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegistro"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="22dp"
        android:background="@drawable/radius_cardview_login"
        android:layout_height="410dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                tools:ignore="MissingConstraints">


                <RelativeLayout
                    android:id="@+id/login_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"

                    android:elevation="8dp"
                    android:padding="20dp"
                    android:visibility="gone">


                    <ProgressBar
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true" />


                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_user"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginTop="-2pt"
                    android:hint="@string/user"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_user_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_below="@id/register_user"
                    android:layout_marginTop="-2pt"
                    android:hint="@string/email"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_email_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_below="@id/register_email"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_password_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/conect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_password"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins"
                    android:layout_marginHorizontal="20dp"
                    android:textAllCaps="false"
                    android:background="@drawable/style_buttom_login"
                    android:onClick="letTheUserLoggedIn"
                    android:text="@string/registrar"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/regresarLog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/conect"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/radius_cardview_register"
                    android:onClick="callSignUpFromLogin"
                    android:text="@string/volver"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>